updated css to display correctly on IPAD screens and started adding separate css files for each page to help readability of the code

--- a/assets/style.css
+++ b/assets/style.css
@@ -183,18 +183,21 @@ header .navbar {
     width: 70%;
     margin-left: 10%;
     margin-right: 15%;
+    padding:0;
     position: absolute;
     bottom: 15px;
     top: 85%;
 }
 #membership-div-fav .btn-membership {
     height:70px;
+    padding:0;
 }
 
 .membership-div ul {
     text-align: center;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 2;
+    padding-left:10px;
 }
 
 .membership-margin-left {
@@ -404,13 +407,13 @@ footer a:hover {
         text-align: center;
     }
     #membership-div-fav .btn-membership {
-    height:60px;
-    width: 70%;
-    margin-left: 10%;
-    margin-right: 15%;
-    position: absolute;
-    bottom: 15px;
-    top: 87.3%;
+        height:60px;
+        width: 70%;
+        margin-left: 10%;
+        margin-right: 15%;
+        position: absolute;
+        bottom: 15px;
+        top: 87.3%;
 }
 .membership-div ul{
     padding-top:20px;
@@ -433,6 +436,12 @@ footer a:hover {
         margin-top: -13%;
 
     }
+    .membership-div ul {
+    text-align: center;
+    font-size: 18px;
+    line-height: 2;
+    padding-left:10px;
+    
 }
 
 @media screen and (max-width: 800px) {
@@ -456,9 +465,10 @@ footer a:hover {
     }
     
     #membership-div-fav .btn-membership {
-    padding:0;
+        padding:0;
 }
-.membership-div .btn-membership {
-    padding:0;
+    .membership-div .btn-membership {
+        padding:0;
 }
+
 }
